--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -19,5 +19,8 @@ About Rango
 
     <div>
         <img src="{{MEDIA_URL}}cat.jpg" alt="Picture of a Cat." />
+        
+
+        <p>Visits: {{ visits }}</p>
     </div>
 {% endblock %}
